--- a/www/player/css/player.css
+++ b/www/player/css/player.css
@@ -193,7 +193,8 @@ hr, html, i, iframe, div, img, ins, kbd, label, legend, ul, li, menu, object, ol
     border-left-color: darkgray;
     border-top-color: darkgray;
     border-radius: 2px;
-    right: 33px;
+    top: 3px;
+    right: -10px;
     padding-left: 2px;
     padding-right: 2px;
 }
